--- a/app/src/main/res/layout/movie_dialog.xml
+++ b/app/src/main/res/layout/movie_dialog.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+            android:layout_width="match_parent" >
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/dialogPoster"
-        android:layout_width="wrap_content"
-        android:layout_height="146dp"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         android:layout_marginTop="10dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,9 +23,9 @@
         android:id="@+id/dialogTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="20dp"
         android:text="TextView"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,12 +33,23 @@
         app:layout_constraintTop_toBottomOf="@id/dialogPoster"
         tools:layout_constraintStart_toStartOf="parent" />
 
+    <RatingBar
+        android:id="@+id/dialogRating"
+        style="?android:attr/ratingBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="20dp"
+        android:isIndicator="true"
+        android:numStars="10"
+        android:stepSize="0.1" />
+
     <TextView
         android:id="@+id/dialogOverview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="12dp"
+        android:layout_marginRight="20dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
@@ -44,3 +58,4 @@
         tools:layout_constraintEnd_toEndOf="parent" />
 
 </LinearLayout>
+</ScrollView>
