--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,5 +15,6 @@
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">#0E0E0E</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:windowContentTransitions">true</item>
     </style>
 </resources>
